--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -1,5 +1,4 @@
 <%- include('../includes/head.ejs') %>
- 
 </head>
 
 <body>
@@ -12,9 +11,6 @@
         </div>
         <h2><%= product.price %></h2>
         <p><%= product.description %></p>
-        <%- include('../includes/add-to-cart.ejs' %>
-
+        <%- include('../includes/add-to-cart.ejs') %>
     </main>
-    
-
 <%- include('../includes/end.ejs') %>
