--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -22,14 +22,15 @@
                             <p class="product__description"><%= product.description %></p>
                         </div>
                         <div class="card__actions">
-                                <a href="/products/<%= product._id %>" class="btn">Details</a>
-                                <% if (isAuthenticated) { %>
-                                    <%- include('../includes/add-to-cart.ejs', {product: product}) %>
-                                <% } %>
+                            <a href="/products/<%= product._id %>" class="btn">Details</a>
+                            <% if (isAuthenticated) { %>
+                                <%- include('../includes/add-to-cart.ejs', {product: product}) %>
+                            <% } %>
                         </div>
                     </article>
                 <% } %>
-            </div>
+            </div>  
+            <%- include('../includes/pagination.ejs')%>
         <% } else { %>
             <h1>No Products Found!</h1>
         <% } %>
